<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyRecyclerView2">

    <ImageView
        android:id="@+id/homeImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bgimg"
        android:scaleType="fitXY"
        android:background="@drawable/bg" />

    <LinearLayout
        android:id="@+id/main_widget"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="85.5dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/homeLoginButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_bg"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/homeSignupButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="normal" />


        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_widget"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-56dp"
        app:srcCompat="@drawable/ic_launcher_foreground" />




</RelativeLayout>