<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/homeliner">

        <Button
            android:id="@+id/backbutton"
            android:layout_width="59dp"
            android:layout_height="50dp"
            android:background="@color/black"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
            android:onClick="backhome"
            android:paddingLeft="20dp"
            android:paddingTop="2dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeliner"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30sp"
        android:src="@drawable/ic_launcher_foreground"
        />
    <LinearLayout
        android:id="@+id/Linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/ic_baseline_view_list_24" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/ic_baseline_playlist_add_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Linear1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/country_list"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/your_list"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>